--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,20 @@
         <div id="menu-titulo">
           <h1>Silas Ianez</h1>
           <h2><i> Aprendendo</i></h2>
-        </div>  
+        </div>
+        <nav class="navbar navbar-inverse navbar-toggleable-sm" id="menu-links">
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#menu-links-interno">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand hidden-md-up" href="#">menu</a>
+          <div class="navbar-collapse collapse" id="menu-links-interno">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link active" href="#sobre-mim">sobre</a>
+              <a class="nav-item nav-link" href="#artigos">artigos</a>
+              <a class="nav-item nav-link" href="#contato">contato</a>
+            </div>
+          </div>
+        </nav>
       </header>
     </div>
     <div class="col-md-8" id="conteudo">conteúdo</div>
