--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,12 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#menu-links-interno">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand hidden-md-up" href="#">menu</a>
+          <a class="navbar-brand hidden-md-up" href="#">Menu</a>
           <div class="navbar-collapse collapse" id="menu-links-interno">
             <div class="navbar-nav">
-              <a class="nav-item nav-link active" href="#sobre-mim">sobre</a>
-              <a class="nav-item nav-link" href="#artigos">artigos</a>
-              <a class="nav-item nav-link" href="#contato">contato</a>
+              <a class="nav-item nav-link active" href="#sobre-mim">Sobre</a>
+              <a class="nav-item nav-link" href="#artigos">Artigos</a>
+              <a class="nav-item nav-link" href="#contato">Contato</a>
             </div>
           </div>
         </nav>
