ajuste em texto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <header>
         <div id="menu-titulo">
           <h1>Silas Ianez</h1>
-          <h2><i> Aprendendo</i></h2>
+          <h2><i> Aprendendo na prática</i></h2>
         </div>
         <nav class="navbar navbar-inverse navbar-toggleable-sm" id="menu-links">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#menu-links-interno">
