--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,25 @@
   <div class="row">
     <div class="col-md-4" id="menu">
       <header>
-        <h1>Code Noda</h1>
-        <h2><i>Aprendendo na Prática</i></h2>
+        <div id="menu-titulo">
+          <h1>Code Noda</h1>
+          <h2><i>Aprendendo na Prática</i></h2>
+        </div>
+        <nav class="navbar navbar-inverse navbar-toggleable" id="menu-links">
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#menu-links-interno">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand hidden-md-up" href="#">menu</a>
+          <div class="navbar-collapse collapse" id="menu-links-interno">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link active" href="#sobre-mim">sobre</a>
+              <a class="nav-item nav-link" href="#artigos">artigos</a>
+              <a class="nav-item nav-link" href="#contato">contato</a>
+            </div>
+          </div>
+        </nav>
       </header>  
     </div>
-    <div class="col-md-8" id="conteudo">conteúdo</div>
+    <div class="col-md-8" id="conteudo">conteudo</div>
   </div>
 </div>
