--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         </div>
         <nav class="navbar navbar-inverse navbar-toggleable-sm" id="menu-links">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#menu-links-interno">
-            <span class="navbar-toggler-icon"></span>
+            <span class="glyphicon glyphicon-resize-vertical"></span>
           </button>
           <a class="navbar-brand hidden-md-up" href="#">Menu</a>
           <div class="navbar-collapse collapse" id="menu-links-interno">
