--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+@import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Shadows Into Light', cursive;
+}
+
+header{
+  animation:goDown 10s infinite;
+  position:relative;
+}
+
+@keyframes goDown {
+  0%  { top: 0px; }
+  10% { top: 20px; }
+  95% { top: 20px; }
+  100% { top: 0px; }
+}
